--- a/index.html
+++ b/index.html
@@ -194,6 +194,10 @@ Amherst, MA 01003<br>
 
 <span style="display:inline-block; height: 20px;"></span>
 
+<p>&#9725;&nbsp; New manuscript (with Faruk Akkuş): <a href="NeuAkkus_Submitted.pdf" style="color: White"><i>On some putative unaccusativity diagnostics</i></a>.</p>
+
+<span style="display:inline-block; height: 20px;"></span>
+
 <p>&#9725;&nbsp; My paper <i>Hybridity and change in Turkish inflectional morphology</i> has been accepted, pending minor revisions, at <i>Linguistic Variation</i>. The current version is <a href="Neu_UnderReview_Hybridity.pdf" style="color: White">here</a>.</p>
 
 <span style="display:inline-block; height: 20px;"></span>
