--- a/output.html
+++ b/output.html
@@ -127,6 +127,10 @@ html * {
 
 <span style="display:inline-block; height: 20px;"></span>
 
+<p>Submitted. (With Faruk Akkuş.) On some putative unaccusativity diagnostics. <a href="NeuAkkus_Submitted.pdf" style="color: White">[pdf]</a></p>
+
+<span style="display:inline-block; height: 20px;"></span>
+
 <p>Accepted pending minor revisions. Hybridity and change in Turkish inflectional morphology. <i>Linguistic Variation</i>. <a href="Neu_UnderReview_Hybridity.pdf" style="color: White">[pdf]</a></p>
 
 <span style="display:inline-block; height: 20px;"></span>
