--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@ Amherst, MA 01003<br>
 
 <span style="display:inline-block; height: 20px;"></span>
 
-<p>&#9725;&nbsp; My paper <i>Hybridity and change in Turkish inflectional morphology</i> has been accepted, pending minor revisions, at <i>Linguistic Variation</i>. The current version is <a href="Neu_UnderReview_Hybridity.pdf" style="color: White">here</a>.</p>
+<p>&#9725;&nbsp; My paper <i>Hybridity and change in Turkish inflectional morphology</i> has been accepted, pending minor revisions, at <i>Linguistic Variation</i>. The updated version is <a href="Neu_Accepted_Hybridity.pdf" style="color: White">here</a>.</p>
 
 <span style="display:inline-block; height: 20px;"></span>
 
