--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@ Amherst, MA 01003<br>
 
 <br>
 
-<p> My research is broadly concerned with the interface between syntax and the lexicon. At LF, I work on argument structure and the mapping relationship between root semantics and syntac. Towards PF, I work on phenomena at the boundary between morphology and syntax, with a particular focus on coordination at the subword level. I dabble in computational modelling and distributional semantics, and I have an interest in language contact and diachrony.</p> 
+<p> My research is concerned with the interface between syntax and the lexicon, or more generally, between the generative, productive aspects of language and its random idiosyncrasies. At LF, I work on argument structure, focusing on how the lexical semantics of verbal roots is integrated into the functional structure. Towards PF, I work on phenomena at the boundary between morphology and syntax such as subword coordination. I dabble in computational modelling and distributional semantics, and I have an interest in language contact and diachrony.</p> 
 
 <br>
 
@@ -190,7 +190,9 @@ Amherst, MA 01003<br>
 
 <p><b>News </b></p>
 
+<span style="display:inline-block; height: 20px;"></span>
 
+<p>&#9725;&nbsp;I'm presenting my dissertation work at the NYU Syntax Brown Bag on November 7. My prospectus is <a href="Neu_diss_prospectus.pdf" style="color: White">here</a>.</p>
 
 <span style="display:inline-block; height: 20px;"></span>
 
@@ -198,16 +200,11 @@ Amherst, MA 01003<br>
 
 <span style="display:inline-block; height: 20px;"></span>
 
-<p>&#9725;&nbsp; My paper <i>Hybridity and change in Turkish inflectional morphology</i> has been accepted, pending minor revisions, at <i>Linguistic Variation</i>. The updated version is <a href="Neu_Accepted_Hybridity.pdf" style="color: White">here</a>.</p>
+<p>&#9725;&nbsp; I'll be at NELS at NYU to give a talk together with <a href="https://www.qmul.ac.uk/sllf/linguistics/people/research-students/profiles/guo.html" style="color: White">Lulu Guo</a> on a multidominance analysis of phrasal and subword RNR (<a href="neu_unifyingphrasaland.pdf" style="color: White">handout</a>, <a href="NeuGuo_2025_NELS_abstract.pdf" style="color: White">abstract</a>).</p>
 
 <span style="display:inline-block; height: 20px;"></span>
 
-<p>&#9725;&nbsp; I'll be at NELS at NYU to give a talk together with <a href="https://www.qmul.ac.uk/sllf/linguistics/people/research-students/profiles/guo.html" style="color: White">Lulu Guo</a> on a multidominance analysis of phrasal and subword RNR. Our abstract is <a href="NeuGuo_2025_NELS_abstract.pdf" style="color: White">here</a>.</p>
-
-<span style="display:inline-block; height: 20px;"></span>
-
-<p>&#9725;&nbsp; My dissertation prospectus is now available <a href="Neu_diss_prospectus.pdf" style="color: White">here</a>.</p>
-
+<p>&#9725;&nbsp; My paper <a href="Neu_Accepted_Hybridity.pdf" style="color: White"><i>Hybridity and change in Turkish inflectional morphology</i></a>  has been accepted at <i>Linguistic Variation</i>.</p>
 
 <span style="display:inline-block; height: 65px;"></span>
 
