--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@ Amherst, MA 01003<br>
 
 <span style="display:inline-block; height: 20px;"></span>
 
-<p>&#9725;&nbsp;I'm presenting my dissertation work at the NYU Syntax Brown Bag on November 7. My prospectus is <a href="Neu_diss_prospectus.pdf" style="color: White">here</a>.</p>
+<p>&#9725;&nbsp;I'm presenting my dissertation work at the NYU Syntax Brown Bag on November 7. My handout is <a href="Neu_handout_SBB_2025.pdf" style="color: White">here</a>, my prospectus <a href="Neu_diss_prospectus.pdf" style="color: White">here</a>.</p>
 
 <span style="display:inline-block; height: 20px;"></span>
 
