--- a/index.html
+++ b/index.html
@@ -192,6 +192,10 @@ Amherst, MA 01003<br>
 
 <span style="display:inline-block; height: 20px;"></span>
 
+<p>&#9725;&nbsp; My paper <i>Hybridity and change in Turkish inflectional morphology</i> is out at <i>Linguistic Variation</i>. A preprint is <a href="Neu_Accepted_Hybridity.pdf" style="color: White">here</a>, the official version <a href="https://www.jbe-platform.com/content/journals/10.1075/lv.24071.neu" style="color: White">here</a>.</p>
+
+<span style="display:inline-block; height: 20px;"></span>
+
 <p>&#9725;&nbsp;I'm presenting my dissertation work at the NYU Syntax Brown Bag on November 7. My handout is <a href="Neu_handout_SBB_2025.pdf" style="color: White">here</a>, my prospectus <a href="Neu_diss_prospectus.pdf" style="color: White">here</a>.</p>
 
 <span style="display:inline-block; height: 20px;"></span>
@@ -202,9 +206,6 @@ Amherst, MA 01003<br>
 
 <p>&#9725;&nbsp; I'll be at NELS at NYU to give a talk together with <a href="https://www.qmul.ac.uk/sllf/linguistics/people/research-students/profiles/guo.html" style="color: White">Lulu Guo</a> on a multidominance analysis of phrasal and subword RNR (<a href="neu_unifyingphrasaland.pdf" style="color: White">handout</a>, <a href="NeuGuo_2025_NELS_abstract.pdf" style="color: White">abstract</a>).</p>
 
-<span style="display:inline-block; height: 20px;"></span>
-
-<p>&#9725;&nbsp; My paper <a href="Neu_Accepted_Hybridity.pdf" style="color: White"><i>Hybridity and change in Turkish inflectional morphology</i></a>  has been accepted at <i>Linguistic Variation</i>.</p>
 
 <span style="display:inline-block; height: 65px;"></span>
 
