--- a/output.html
+++ b/output.html
@@ -143,7 +143,7 @@ html * {
 
 <span style="display:inline-block; height: 24px;"></span> 
 
-<p>2025. (With Faruk Akkuş.) Causatives without causation: Involvee causatives in Turkish.  <i>Proceedings of the 42nd West Coast Conference on Formal Linguistics</i>. <a href="NeuAkkus_2024_WCCFL.pdf" style="color: White">[pdf]</a></p>
+<p>2025. (With Faruk Akkuş.) Causatives without causation: Involvee causatives in Turkish.  <i>Proceedings of the 42nd West Coast Conference on Formal Linguistics</i>. 284–293. <a href="NeuAkkus_2024_WCCFL.pdf" style="color: White">[pdf]</a></p>
 
 <span style="display:inline-block; height: 20px;"></span>
 
