--- a/output.html
+++ b/output.html
@@ -131,11 +131,11 @@ html * {
 
 <span style="display:inline-block; height: 20px;"></span>
 
-<p>Accepted. Hybridity and change in Turkish inflectional morphology. <i>Linguistic Variation</i>. <a href="Neu_Accepted_Hybridity.pdf" style="color: White">[pdf]</a></p>
+<p>To appear. Direct causatives of unergatives: A view from variable unaccusativity. <i>Natural Language and Linguistic Theory</i>. <a href="Neu_Accepted_NLLT.pdf" style="color: White">[pdf]</a></p>
 
 <span style="display:inline-block; height: 20px;"></span>
 
-<p>To appear. Direct causatives of unergatives: A view from variable unaccusativity. <i>Natural Language and Linguistic Theory</i>. <a href="Neu_Accepted_NLLT.pdf" style="color: White">[pdf]</a></p>
+<p>2025. Hybridity and change in Turkish inflectional morphology. <i>Linguistic Variation</i>. <a href="Neu_Accepted_Hybridity.pdf" style="color: White">[pdf]</a></p>
 
 <span style="display:inline-block; height: 36px;"></span>
 
