--- a/output.html
+++ b/output.html
@@ -187,6 +187,10 @@ html * {
 
 <span style="display:inline-block; height: 28px;"></span> 
 
+<p>2025. (With Lulu Guo.) Unifying phrasal and subword Right-Node Raising: A multidominance account. Handout from talk given at NELS 56, NYU, October 17–19. <a href="neu_unifyingphrasaland.pdf" style="color: White">[pdf]</a></p>
+
+<span style="display:inline-block; height: 20px;"></span> 
+
 <p>2025. (With Maayan Keshev and Brian Dillon.) Encoding syntactic positions in working memory: A computational approach. Poster presented at HSP2025, University of Maryland, March 27–29.  <a href="NeuEtAl_HSP_Vectors.pdf" style="color: White">[pdf]</a> <a href="https://github.com/Eva-Neu/syntactic_vectors" style="color: White">[code]</a></p>
 
 
