--- a/output.html
+++ b/output.html
@@ -175,6 +175,10 @@ html * {
 
 <span style="display:inline-block; height: 28px;"></span> 
 
+<p>2025. (With Brian Dillon and Katrin Erk). Interpretable dimensions support an effect of agentivity and telicity on split intransitivity. Ms., UMass Amherst. <a href="https://arxiv.org/abs/2511.16824" style="color: White">[pdf]</a></p>
+
+<span style="display:inline-block; height: 20px;"></span> 
+
 <p>2025. From roots to trees: Thematic roles and the lexicon-syntax interface. Dissertation prospectus, UMass Amherst. <a href="Neu_diss_prospectus.pdf" style="color: White">[pdf]</a></p>
 
 <span style="display:inline-block; height: 20px;"></span> 
