--- a/index.html
+++ b/index.html
@@ -192,15 +192,7 @@ Amherst, MA 01003<br>
 
 <span style="display:inline-block; height: 20px;"></span>
 
-<p>&#9725;&nbsp; My paper <i>Hybridity and change in Turkish inflectional morphology</i> is out at <i>Linguistic Variation</i>. A preprint is <a href="Neu_Accepted_Hybridity.pdf" style="color: White">here</a>, the official version <a href="https://www.jbe-platform.com/content/journals/10.1075/lv.24071.neu" style="color: White">here</a>.</p>
-
-<span style="display:inline-block; height: 20px;"></span>
-
-<p>&#9725;&nbsp;I'm presenting my dissertation work at the NYU Syntax Brown Bag on November 7. My handout is <a href="Neu_handout_SBB_2025.pdf" style="color: White">here</a>, my prospectus <a href="Neu_diss_prospectus.pdf" style="color: White">here</a>.</p>
-
-<span style="display:inline-block; height: 20px;"></span>
-
-<p>&#9725;&nbsp; New manuscript (with Faruk Akkuş): <a href="NeuAkkus_Submitted.pdf" style="color: White"><i>On some putative unaccusativity diagnostics</i></a>.</p>
+<p>&#9725;&nbsp; My paper <i>Direct causatives of unergatives: A view from variable unaccusativity</i> is out at <i>Natural Language & Linguistic theory</i>. A preprint is <a href="Neu_Accepted_NLLT.pdf" style="color: White">here</a>, the official version <a href="https://link.springer.com/article/10.1007/s11049-025-09693-1" style="color: White">here</a>.</p>
 
 <span style="display:inline-block; height: 65px;"></span>
 
