--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@ Amherst, MA 01003<br>
 
 <span style="display:inline-block; height: 20px;"></span>
 
-<p>&#9725;&nbsp; My paper <i>Direct causatives of unergatives: A view from variable unaccusativity</i> is out at <i>Natural Language & Linguistic theory</i>. A preprint is <a href="Neu_Accepted_NLLT.pdf" style="color: White">here</a>, the official version <a href="https://link.springer.com/article/10.1007/s11049-025-09693-1" style="color: White">here</a>.</p>
+<p>&#9725;&nbsp; My paper <i>Direct causatives of unergatives: A view from variable unaccusativity</i> is out at <i>Natural Language & Linguistic Theory</i>. A preprint is <a href="Neu_Accepted_NLLT.pdf" style="color: White">here</a>, the official version <a href="https://link.springer.com/article/10.1007/s11049-025-09693-1" style="color: White">here</a>.</p>
 
 <span style="display:inline-block; height: 65px;"></span>
 
