--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@ Amherst, MA 01003<br>
 
 <span style="display:inline-block; height: 20px;"></span>
 
-<p>&#9725;&nbsp; I'll be at PLC 50 with a talk entitled <i>Eight shades of animacy: Property axes and split intransitivity<\i> (joint work with Brian Dillon and Katrin Erk).</p>
+<p>&#9725;&nbsp; I'll be at PLC 50 with a talk entitled <i>Eight shades of animacy: Property axes and split intransitivity</i> (joint work with Brian Dillon and Katrin Erk).</p>
 
 <span style="display:inline-block; height: 20px;"></span>
 
