--- a/index.html
+++ b/index.html
@@ -192,11 +192,11 @@ Amherst, MA 01003<br>
 
 <span style="display:inline-block; height: 20px;"></span>
 
-<p>&#9725;&nbsp; I'll be at PLC 50 with a talk entitled <i>Eight shades of animacy: Property axes and split intransitivity</i> (joint work with Brian Dillon and Katrin Erk).</p>
+<p>&#9725;&nbsp; I'll be at HSP with a poster entitled <i>Frequency modulates structural choices in Turkish non-local derivational morphemes</i> (joint work with Utku Türk, Özge Bakay, Brian Dillon and Gaja Jarosz).</p>
 
 <span style="display:inline-block; height: 20px;"></span>
 
-<p>&#9725;&nbsp; My paper <i>Direct causatives of unergatives: A view from variable unaccusativity</i> is out at <i>Natural Language & Linguistic Theory</i>. A preprint is <a href="Neu_Accepted_NLLT.pdf" style="color: White">here</a>, the official version <a href="https://link.springer.com/article/10.1007/s11049-025-09693-1" style="color: White">here</a>.</p>
+<p>&#9725;&nbsp; I'll be at PLC with a talk entitled <i>Eight shades of animacy: Property axes and split intransitivity</i> (joint work with Brian Dillon and Katrin Erk).</p>
 
 <span style="display:inline-block; height: 65px;"></span>
 
