--- a/index.html
+++ b/index.html
@@ -192,6 +192,10 @@ Amherst, MA 01003<br>
 
 <span style="display:inline-block; height: 20px;"></span>
 
+<p>&#9725;&nbsp; Talk at Tu+ coming up: <i>The syntax-morphology divide is gradient and sensitive to frequency: Evidence from suspended affixation</i> (joint work with Utku Türk, Özge Bakay, Brian Dillon and Gaja Jarosz).</p>
+
+<span style="display:inline-block; height: 20px;"></span>
+
 <p>&#9725;&nbsp; I'll be at HSP with a poster entitled <i>Frequency modulates structural choices in Turkish non-local derivational morphemes</i> (joint work with Utku Türk, Özge Bakay, Brian Dillon and Gaja Jarosz).</p>
 
 <span style="display:inline-block; height: 20px;"></span>
