--- a/output.html
+++ b/output.html
@@ -23,18 +23,15 @@
 
 <style>
 
-/* Set hperlink color and margins */
+/* Set hyperlink color and margins */
 
-a {
-  color: black;
-}
  p {
   margin: 0px 60px;  
   margin-bottom: -18px;
 }
 
 html * {
-  font-family: Helvetica, sans-serif;
+  font-family: 'Times New Roman';
 }
 
 /* Reset styles to ensure consistent styling across browsers */
@@ -49,8 +46,8 @@ html * {
 
 .main {
   position: absolute;
-  background-color: Black;
-  color: White;
+  background-color: White;
+  color: Black;
   font-size: 18px;
   float: left;
 }
@@ -58,12 +55,12 @@ html * {
 /* Menubar styles */
 
 .menubar {
-  background-color: Black;
+  background-color: White;
   color: #fff;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 10px;
+  padding: 20px;
   font-size: 18px;
 }
 
@@ -78,15 +75,10 @@ html * {
 }
 
 .menubar a {
-  color: #fff;
+  color: Black;
   text-decoration: none;
   padding: 5px;
   border-radius: 5px;
-}
-
-.menubar a:hover {
-  background-color: #fff;
-  color: black;
 }
 
 @media screen and (max-width: 1100px) {
@@ -106,7 +98,7 @@ html * {
 
 <!-- Body here  -->
 
-<body style="background-color:Black">
+<body style="background-color:White">
 
 <!-- Navigation bar  -->
 
@@ -121,81 +113,93 @@ html * {
 
 <!-- Page Content -->
 
-<div class="main" style="margin-top:4%; float:left ">  
+<div class="main" style="margin-top:2%; float:left ">  
 
-<p><b>Journal papers</b> </p>
-
-<span style="display:inline-block; height: 20px;"></span>
-
-<p>Submitted. (With Faruk Akkuş.) On some putative unaccusativity diagnostics. <a href="NeuAkkus_Submitted.pdf" style="color: White">[pdf]</a></p>
+<p><b>Journal papers:</b> </p>
 
 <span style="display:inline-block; height: 20px;"></span>
 
-<p>2026. Direct causatives of unergatives: A view from variable unaccusativity. <i>Natural Language and Linguistic Theory</i> 44. <a href="Neu_Accepted_NLLT.pdf" style="color: White">[pdf]</a></p>
+<p>Submitted. (With Faruk Akkuş.) On some putative unaccusativity diagnostics. <a href="NeuAkkus_Submitted.pdf" style="color: Blue">[pdf]</a></p>
 
 <span style="display:inline-block; height: 20px;"></span>
 
-<p>2025. Hybridity and change in Turkish inflectional morphology. <i>Linguistic Variation</i>. <a href="Neu_Accepted_Hybridity.pdf" style="color: White">[pdf]</a></p>
+<p>2026. Direct causatives of unergatives: A view from variable unaccusativity. <i>Natural Language and Linguistic Theory</i> 44. <a href="Neu_Accepted_NLLT.pdf" style="color: Blue">[pdf]</a></p>
+
+<span style="display:inline-block; height: 20px;"></span>
+
+<p>2025. Hybridity and change in Turkish inflectional morphology. <i>Linguistic Variation</i>. <a href="Neu_Accepted_Hybridity.pdf" style="color: Blue">[pdf]</a></p>
 
 <span style="display:inline-block; height: 36px;"></span>
 
-<p><b>Proceedings papers </b></p>
-
-<span style="display:inline-block; height: 24px;"></span> 
-
-<p>2025. (With Faruk Akkuş.) Causatives without causation: Involvee causatives in Turkish.  <i>Proceedings of the 42nd West Coast Conference on Formal Linguistics</i>. 284–293. <a href="NeuAkkus_2024_WCCFL.pdf" style="color: White">[pdf]</a></p>
+<hr>
 
 <span style="display:inline-block; height: 20px;"></span>
 
-<p>2025. Variation and gradience in non-standard Turkish affix ordering.  <i>Proceedings of the Linguistic Society of America (PLSA) 10(1)</i>. 5922. <a href="Neu_2025_LSA_Turkish.pdf" style="color: White">[pdf]</a></p>
+<p><b>Proceedings papers: </b></p>
+
+<span style="display:inline-block; height: 20px;"></span> 
+
+<p>2025. (With Faruk Akkuş.) Causatives without causation: Involvee causatives in Turkish.  <i>Proceedings of the 42nd West Coast Conference on Formal Linguistics</i>. 284–293. <a href="NeuAkkus_2024_WCCFL.pdf" style="color: Blue">[pdf]</a></p>
 
 <span style="display:inline-block; height: 20px;"></span>
 
-<p>2025. (With Rajesh Bhatt and Shaunak Phadnis.) Degrees of animacy and telicity in Hindi intransitives: A corpus study.  <i>Proceedings of the Linguistic Society of America (PLSA) 10(1)</i>. 5923. <a href="NeuEtAl_2025_LSA_Hindi.pdf" style="color: White">[pdf]</a></p>
+<p>2025. Variation and gradience in non-standard Turkish affix ordering.  <i>Proceedings of the Linguistic Society of America (PLSA) 10(1)</i>. 5922. <a href="Neu_2025_LSA_Turkish.pdf" style="color: Blue">[pdf]</a></p>
 
 <span style="display:inline-block; height: 20px;"></span>
 
-<p>2024. The realization of agreement in the Turkish verbal domain.  <i>Proceedings of the Workshop on Turkic and Languages in Contact with Turkic</i>. 16–30. <a href="Neu_2024_Tu+.pdf" style="color: White">[pdf]</a></p>
+<p>2025. (With Rajesh Bhatt and Shaunak Phadnis.) Degrees of animacy and telicity in Hindi intransitives: A corpus study.  <i>Proceedings of the Linguistic Society of America (PLSA) 10(1)</i>. 5923. <a href="NeuEtAl_2025_LSA_Hindi.pdf" style="color: Blue">[pdf]</a></p>
 
 <span style="display:inline-block; height: 20px;"></span>
 
-<p>2024. (With Faruk Akkuş.) Involvee causatives in Turkish. <i>Proceedings of the Linguistic Society of America (PLSA) 9(1)</i>. 5703.  <a href="NeuAkkus_2024_LSA.pdf" style="color: White">[pdf]</a></p>
+<p>2024. The realization of agreement in the Turkish verbal domain.  <i>Proceedings of the Workshop on Turkic and Languages in Contact with Turkic</i>. 16–30. <a href="Neu_2024_Tu+.pdf" style="color: Blue">[pdf]</a></p>
 
 <span style="display:inline-block; height: 20px;"></span>
 
-<p>2023. Causatives of unergatives in Hindi-Urdu. <i>Coyote Papers 25: Proceedings of ALC 16</i>. 71&#x2013;78. <a href="Neu_2023_ALC.pdf" style="color: White">[pdf]</a></p>
+<p>2024. (With Faruk Akkuş.) Involvee causatives in Turkish. <i>Proceedings of the Linguistic Society of America (PLSA) 9(1)</i>. 5703.  <a href="NeuAkkus_2024_LSA.pdf" style="color: Blue">[pdf]</a></p>
 
 <span style="display:inline-block; height: 20px;"></span>
 
-<p>2023. Against a low subject analysis of causatives of unergatives. <i>Proceedings of the Linguistic Society of America (PLSA) 8(1)</i>. 5527. <a href="Neu_2023_LSA.pdf" style="color: White">[pdf]</a></p>
+<p>2023. Causatives of unergatives in Hindi-Urdu. <i>Coyote Papers 25: Proceedings of ALC 16</i>. 71&#x2013;78. <a href="Neu_2023_ALC.pdf" style="color: Blue">[pdf]</a></p>
+
+<span style="display:inline-block; height: 20px;"></span>
+
+<p>2023. Against a low subject analysis of causatives of unergatives. <i>Proceedings of the Linguistic Society of America (PLSA) 8(1)</i>. 5527. <a href="Neu_2023_LSA.pdf" style="color: Blue">[pdf]</a></p>
 
 <span style="display:inline-block; height: 36px;"></span>
 
-<p><b>Unpublished manuscripts</b></p>
+<hr>
 
-<span style="display:inline-block; height: 28px;"></span> 
+<span style="display:inline-block; height: 20px;"></span>
 
-<p>2025. (With Brian Dillon and Katrin Erk). Interpretable dimensions support an effect of agentivity and telicity on split intransitivity. Ms., UMass Amherst. <a href="https://arxiv.org/abs/2511.16824" style="color: White">[pdf]</a></p>
-
-<span style="display:inline-block; height: 20px;"></span> 
-
-<p>2025. From roots to trees: Thematic roles and the lexicon-syntax interface. Dissertation prospectus, UMass Amherst. <a href="Neu_diss_prospectus.pdf" style="color: White">[pdf]</a></p>
+<p><b>Unpublished manuscripts:</b></p>
 
 <span style="display:inline-block; height: 20px;"></span> 
 
-<p>2023. Variable agreement with conjoined subjects in German: Testing the grammatical lacuna hypothesis. Ms., UMass Amherst. <a href="Neu_2023_Ms.pdf" style="color: White">[pdf]</a> <a href="https://github.com/Eva-Neu/Conjoined_subject_agreement" style="color: White">[code]</a></p>
+<p>2025. (With Brian Dillon and Katrin Erk). Interpretable dimensions support an effect of agentivity and telicity on split intransitivity. Ms., UMass Amherst. <a href="https://arxiv.org/abs/2511.16824" style="color: Blue">[pdf]</a></p>
+
+<span style="display:inline-block; height: 20px;"></span> 
+
+<p>2025. From roots to trees: Thematic roles and the lexicon-syntax interface. Dissertation prospectus, UMass Amherst. <a href="Neu_diss_prospectus.pdf" style="color: Blue">[pdf]</a></p>
+
+<span style="display:inline-block; height: 20px;"></span> 
+
+<p>2023. Variable agreement with conjoined subjects in German: Testing the grammatical lacuna hypothesis. Ms., UMass Amherst. <a href="Neu_2023_Ms.pdf" style="color: Blue">[pdf]</a> <a href="https://github.com/Eva-Neu/Conjoined_subject_agreement" style="color: Blue">[code]</a></p>
 
 <span style="display:inline-block; height: 36px;"></span>
 
-<p><b>Slides/handouts/posters on pre-manuscript-stage work</b></p>
+<hr>
 
-<span style="display:inline-block; height: 28px;"></span> 
+<span style="display:inline-block; height: 20px;"></span>
 
-<p>2025. (With Lulu Guo.) Unifying phrasal and subword Right-Node Raising: A multidominance account. Handout from talk given at NELS 56, NYU, October 17–19. <a href="neu_unifyingphrasaland.pdf" style="color: White">[pdf]</a></p>
+<p><b>Slides/handouts/posters on pre-manuscript-stage work:</b></p>
 
 <span style="display:inline-block; height: 20px;"></span> 
 
-<p>2025. (With Maayan Keshev and Brian Dillon.) Encoding syntactic positions in working memory: A computational approach. Poster presented at HSP2025, University of Maryland, March 27–29.  <a href="NeuEtAl_HSP_Vectors.pdf" style="color: White">[pdf]</a> <a href="https://github.com/Eva-Neu/syntactic_vectors" style="color: White">[code]</a></p>
+<p>2025. (With Lulu Guo.) Unifying phrasal and subword Right-Node Raising: A multidominance account. Handout from talk given at NELS 56, NYU, October 17–19. <a href="neu_unifyingphrasaland.pdf" style="color: Blue">[pdf]</a></p>
+
+<span style="display:inline-block; height: 20px;"></span> 
+
+<p>2025. (With Maayan Keshev and Brian Dillon.) Encoding syntactic positions in working memory: A computational approach. Poster presented at HSP2025, University of Maryland, March 27–29.  <a href="NeuEtAl_HSP_Vectors.pdf" style="color: Blue">[pdf]</a> <a href="https://github.com/Eva-Neu/syntactic_vectors" style="color: Blue">[code]</a></p>
 
 
 <span style="display:inline-block; height: 95px;"></span>
