--- a/index.html
+++ b/index.html
@@ -131,7 +131,9 @@ html * {
 
 <br>
 
-<span style="display:block; height: 30px;"></span>
+<span style="display:block; height: 20px;"></span>
+
+<div style="font-size: 15px; color: Black">
                 
 <p>eneu at umass dot edu<br>
 
