--- a/index.html
+++ b/index.html
@@ -141,6 +141,10 @@ html * {
 
 <p><a href="https://github.com/Eva-Neu">GitHub</a><br>
 
+<span style="display:inline-block; height: 20px; "></span>
+
+<p><a href="CCVC.pdf" style="color: Blue">CV</a></p>
+
 <span style="display:inline-block; height: 30px; "></span>
 
 </div>
