--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <html lang="en">
 
 <head>
-<title>Eva Neu &#x2013; Output</title>
+<title>Eva Neu </title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
