--- a/index.html
+++ b/index.html
@@ -23,51 +23,45 @@
 
 <style>
 
-/* Set hyperlink color and margins */
-
- p {
-  margin: 0px 60px;  
-  margin-bottom: -18px;
-}
-
-html * {
-  font-family: 'Times New Roman';
-}
-
-/* Reset styles to ensure consistent styling across browsers */
-
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: 'Times New Roman';
 }
 
-/* Body styles */
+p {
+  margin: 0 60px;
+  margin-bottom: 8px;
+}
+
+hr {
+  width: 100vw;              /* Full viewport width */
+  margin-left: calc(-50vw + 50%);  /* Break out of margins */
+  border: none;
+  border-top: 1px solid black;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
 
 .main {
-  position: absolute;
-  background-color: White;
-  color: Black;
+  width: 100%;
+  background-color: white;
+  color: black;
   font-size: 18px;
-  float: left;
+  margin-top: 2%;
 }
 
-/* Menubar styles */
-
 .menubar {
-  background-color: White;
-  color: #fff;
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 20px;
-  font-size: 18px;
 }
 
 .menubar ul {
   list-style: none;
   display: flex;
-  align-items: center;
 }
 
 .menubar li {
@@ -75,31 +69,15 @@ html * {
 }
 
 .menubar a {
-  color: Black;
   text-decoration: none;
-  padding: 5px;
-  border-radius: 5px;
+  color: black;
 }
-
-@media screen and (max-width: 1100px) {
-.main, .menubar{
-    font-size: 17px;
-    width: 100%; /* The width is 100%, when the viewport is 800px or smaller */
-    margin-top: 0px;
-    margin-bottom: 0px;
-    margin-right: 60px;
-    margin-left: 0px;
-  }
- }
-
-
 
 </style>
 
 <!-- Body here  -->
 
 <body>
-
 
 <!-- Navigation -->
 
@@ -128,22 +106,12 @@ html * {
 <p><img src="pic.jpeg" style="width:140px"></p>
 
 <br>
-
-<span style="display:block; height: 20px;"></span>
                 
-<p>eneu at umass dot edu<br>
-            
-<!-- Links on the Sidebar -->
+<p>eneu at umass dot edu</p>
 
-<span style="display:inline-block; height: 20px; "></span>
-
-<p><a href="https://github.com/Eva-Neu">GitHub</a><br>
-
-<span style="display:inline-block; height: 20px; "></span>
+<p><a href="https://github.com/Eva-Neu">GitHub</a></p>
 
 <p><a href="CCVC.pdf" style="color: Blue">CV</a></p>
-
-<span style="display:inline-block; height: 30px; "></span>
 
 </div>
 </div>
@@ -152,40 +120,21 @@ html * {
 
 <div class="main" style="margin-top:0%; float:left ">  
 
-<span style="display:block; height: 10px;"></span>
-
 <hr>
-
-<span style="display:inline-block; height: 20px;"></span>
 
 <p> I am a fifth year PhD candidate at the <a href="https://www.umass.edu/linguistics/">Linguistics Department</a> of the University of Massachusetts Amherst. I hold an MA in Linguistics from University College London and a BA in Comparative Literature from Free University of Berlin.</p>
 
-<span style="display:inline-block; height: 20px;"></span>
-
 <p> My research is concerned with the interface between syntax and the lexicon, or more generally, between the generative, productive aspects of language and its random idiosyncrasies. At LF, I work on argument structure, focusing on how the lexical semantics of verbal roots is integrated into the functional structure. Towards PF, I work on phenomena at the boundary between morphology and syntax such as subword coordination. I dabble in computational modelling and distributional semantics, and I have an interest in language contact and diachrony.</p> 
-
-<span style="display:inline-block; height: 20px;"></span>
 
 <p>My last name is pronounced [nɔɪ]. I welcome all reasonable realizations of my first name. My pronouns are she/her.</p>
 
-<span style="display:inline-block; height: 35px;"></span>
-
 <hr>
-
-<span style="display:inline-block; height: 20px;"></span>
-
 
 <p><b>News: </b></p>
 
-<span style="display:inline-block; height: 20px;"></span>
-
 <p>&#x2022;&nbsp;Talk at Tu+ coming up: <i>The syntax-morphology divide is gradient and sensitive to frequency: Evidence from suspended affixation</i> (joint work with Utku Türk, Özge Bakay, Brian Dillon and Gaja Jarosz).</p>
 
-<span style="display:inline-block; height: 20px;"></span>
-
 <p>&#x2022;&nbsp;I'll be at HSP with a poster entitled <i>Frequency modulates structural choices in Turkish non-local derivational morphemes</i> (joint work with Utku Türk, Özge Bakay, Brian Dillon and Gaja Jarosz).</p>
-
-<span style="display:inline-block; height: 20px;"></span>
 
 <p>&#x2022;&nbsp;I'll be at PLC with a talk entitled <i>Eight shades of animacy: Property axes and split intransitivity</i> (joint work with Brian Dillon and Katrin Erk).</p>
 
