--- a/output.html
+++ b/output.html
@@ -23,51 +23,45 @@
 
 <style>
 
-/* Set hyperlink color and margins */
-
- p {
-  margin: 0px 60px;  
-  margin-bottom: -18px;
-}
-
-html * {
-  font-family: 'Times New Roman';
-}
-
-/* Reset styles to ensure consistent styling across browsers */
-
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: 'Times New Roman';
 }
 
-/* Body styles */
+p {
+  margin: 0 60px;
+  margin-bottom: 8px;
+}
+
+hr {
+  width: 100vw;              
+  margin-left: calc(-50vw + 50%);  
+  border: none;
+  border-top: 1px solid black;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
 
 .main {
-  position: absolute;
-  background-color: White;
-  color: Black;
+  width: 100%;
+  background-color: white;
+  color: black;
   font-size: 18px;
-  float: left;
+  margin-top: 2%;
 }
 
-/* Menubar styles */
-
 .menubar {
-  background-color: White;
-  color: #fff;
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 20px;
-  font-size: 18px;
 }
 
 .menubar ul {
   list-style: none;
   display: flex;
-  align-items: center;
 }
 
 .menubar li {
@@ -75,24 +69,9 @@ html * {
 }
 
 .menubar a {
-  color: Black;
   text-decoration: none;
-  padding: 5px;
-  border-radius: 5px;
+  color: black;
 }
-
-@media screen and (max-width: 1100px) {
-.main, .menubar{
-    font-size: 17px;
-    width: 100%; /* The width is 100%, when the viewport is 800px or smaller */
-    margin-top: 0px;
-    margin-bottom: 0px;
-    margin-right: 60px;
-    margin-left: 0px;
-  }
- }
-
-
 
 </style>
 
@@ -117,92 +96,49 @@ html * {
 
 <p><b>Journal papers:</b> </p>
 
-<span style="display:inline-block; height: 20px;"></span>
-
 <p>Submitted. (With Faruk Akkuş.) On some putative unaccusativity diagnostics. <a href="NeuAkkus_Submitted.pdf" style="color: Blue">[pdf]</a></p>
-
-<span style="display:inline-block; height: 20px;"></span>
 
 <p>2026. Direct causatives of unergatives: A view from variable unaccusativity. <i>Natural Language and Linguistic Theory</i> 44. <a href="Neu_Accepted_NLLT.pdf" style="color: Blue">[pdf]</a></p>
 
-<span style="display:inline-block; height: 20px;"></span>
-
 <p>2025. Hybridity and change in Turkish inflectional morphology. <i>Linguistic Variation</i>. <a href="Neu_Accepted_Hybridity.pdf" style="color: Blue">[pdf]</a></p>
 
-<span style="display:inline-block; height: 36px;"></span>
-
 <hr>
-
-<span style="display:inline-block; height: 20px;"></span>
 
 <p><b>Proceedings papers: </b></p>
 
-<span style="display:inline-block; height: 20px;"></span> 
-
 <p>2025. (With Faruk Akkuş.) Causatives without causation: Involvee causatives in Turkish.  <i>Proceedings of the 42nd West Coast Conference on Formal Linguistics</i>. 284–293. <a href="NeuAkkus_2024_WCCFL.pdf" style="color: Blue">[pdf]</a></p>
-
-<span style="display:inline-block; height: 20px;"></span>
 
 <p>2025. Variation and gradience in non-standard Turkish affix ordering.  <i>Proceedings of the Linguistic Society of America (PLSA) 10(1)</i>. 5922. <a href="Neu_2025_LSA_Turkish.pdf" style="color: Blue">[pdf]</a></p>
 
-<span style="display:inline-block; height: 20px;"></span>
-
 <p>2025. (With Rajesh Bhatt and Shaunak Phadnis.) Degrees of animacy and telicity in Hindi intransitives: A corpus study.  <i>Proceedings of the Linguistic Society of America (PLSA) 10(1)</i>. 5923. <a href="NeuEtAl_2025_LSA_Hindi.pdf" style="color: Blue">[pdf]</a></p>
-
-<span style="display:inline-block; height: 20px;"></span>
 
 <p>2024. The realization of agreement in the Turkish verbal domain.  <i>Proceedings of the Workshop on Turkic and Languages in Contact with Turkic</i>. 16–30. <a href="Neu_2024_Tu+.pdf" style="color: Blue">[pdf]</a></p>
 
-<span style="display:inline-block; height: 20px;"></span>
-
 <p>2024. (With Faruk Akkuş.) Involvee causatives in Turkish. <i>Proceedings of the Linguistic Society of America (PLSA) 9(1)</i>. 5703.  <a href="NeuAkkus_2024_LSA.pdf" style="color: Blue">[pdf]</a></p>
-
-<span style="display:inline-block; height: 20px;"></span>
 
 <p>2023. Causatives of unergatives in Hindi-Urdu. <i>Coyote Papers 25: Proceedings of ALC 16</i>. 71&#x2013;78. <a href="Neu_2023_ALC.pdf" style="color: Blue">[pdf]</a></p>
 
-<span style="display:inline-block; height: 20px;"></span>
-
 <p>2023. Against a low subject analysis of causatives of unergatives. <i>Proceedings of the Linguistic Society of America (PLSA) 8(1)</i>. 5527. <a href="Neu_2023_LSA.pdf" style="color: Blue">[pdf]</a></p>
 
-<span style="display:inline-block; height: 36px;"></span>
-
 <hr>
-
-<span style="display:inline-block; height: 20px;"></span>
 
 <p><b>Unpublished manuscripts:</b></p>
 
-<span style="display:inline-block; height: 20px;"></span> 
-
 <p>2025. (With Brian Dillon and Katrin Erk). Interpretable dimensions support an effect of agentivity and telicity on split intransitivity. Ms., UMass Amherst. <a href="https://arxiv.org/abs/2511.16824" style="color: Blue">[pdf]</a></p>
-
-<span style="display:inline-block; height: 20px;"></span> 
 
 <p>2025. From roots to trees: Thematic roles and the lexicon-syntax interface. Dissertation prospectus, UMass Amherst. <a href="Neu_diss_prospectus.pdf" style="color: Blue">[pdf]</a></p>
 
-<span style="display:inline-block; height: 20px;"></span> 
-
 <p>2023. Variable agreement with conjoined subjects in German: Testing the grammatical lacuna hypothesis. Ms., UMass Amherst. <a href="Neu_2023_Ms.pdf" style="color: Blue">[pdf]</a> <a href="https://github.com/Eva-Neu/Conjoined_subject_agreement" style="color: Blue">[code]</a></p>
-
-<span style="display:inline-block; height: 36px;"></span>
 
 <hr>
 
-<span style="display:inline-block; height: 20px;"></span>
-
 <p><b>Slides/handouts/posters on pre-manuscript-stage work:</b></p>
-
-<span style="display:inline-block; height: 20px;"></span> 
 
 <p>2025. (With Lulu Guo.) Unifying phrasal and subword Right-Node Raising: A multidominance account. Handout from talk given at NELS 56, NYU, October 17–19. <a href="neu_unifyingphrasaland.pdf" style="color: Blue">[pdf]</a></p>
 
-<span style="display:inline-block; height: 20px;"></span> 
-
 <p>2025. (With Maayan Keshev and Brian Dillon.) Encoding syntactic positions in working memory: A computational approach. Poster presented at HSP2025, University of Maryland, March 27–29.  <a href="NeuEtAl_HSP_Vectors.pdf" style="color: Blue">[pdf]</a> <a href="https://github.com/Eva-Neu/syntactic_vectors" style="color: Blue">[code]</a></p>
 
-
-<span style="display:inline-block; height: 95px;"></span>
+<span style="display:inline-block; height: 65px;"></span>
 
 </div>
 
