--- a/index.html
+++ b/index.html
@@ -132,13 +132,15 @@ hr {
 
 <p><b>News: </b></p>
 
+<p>&#x2022;&nbsp;I'm at PLC on February 28–March 1 with a talk on <i>Eight shades of animacy: Property axes and split intransitivity</i> (joint work with Brian Dillon and Katrin Erk). Our slides are <a href="NeuEtAl_PLC50_slides.pdf">here</a>.</p>
+
 <p>&#x2022;&nbsp;Presenting a poster at GLOW  in Siena on April 21–23: <i>Subword RNR as Multidominance-Plus-Ellipsis</i> (joint work with Lulu Guo).</p>
 
 <p>&#x2022;&nbsp;Talk at Tu+ at MIT on April 11–12 coming up: <i>The syntax-morphology divide is gradient and sensitive to frequency: Evidence from suspended affixation</i> (joint work with Utku Türk, Özge Bakay, Brian Dillon and Gaja Jarosz).</p>
 
 <p>&#x2022;&nbsp;I'll be at HSP at MIT on March 26–28 with a poster: <i>Frequency modulates structural choices in Turkish non-local derivational morphemes</i> (joint work with Utku Türk, Özge Bakay, Brian Dillon and Gaja Jarosz).</p>
 
-<p>&#x2022;&nbsp;I'll be at PLC on February 28–March 1 with a talk on <i>Eight shades of animacy: Property axes and split intransitivity</i> (joint work with Brian Dillon and Katrin Erk).</p>
+
 
 <span style="display:inline-block; height: 65px;"></span>
 
